# talent-rag

./: README.md  pyproject.toml
backend/: .env
backend/app/: api.py  config.py  index.py  main.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx  style.css
frontend/src/pages/: Candidates.jsx  Dashboard.jsx  Jobs.jsx  Query.jsx  Rankings.jsx
